feat: creating a database connection

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "connectionSqlServer": "Server=localhost; Database=Minimals; User Id=sa; Password=Senha123; TrustServerCertificate=true"
   }
 }
