feat: add configs Authentication and Authorization

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "connectionSqlServer": "Server=localhost; Database=Minimals; User Id=sa; Password=Senha123; TrustServerCertificate=true"
-  }
+  },
+  "Jwt": "minimals-api"
 }
